--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - images/all/
+    - images/shoes/
+    - images/beauty/
+    - images/women fashion/
+    - images/men fashion/
+    - images/jewelry/ 
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
